src/objects/PMF_Finca_Categoria_7_Manejo_plaguicid__c.object
<CustomObject>
    <fields>
        <fullName>Capacita_personal_manejo_de_agroquimicos__c</fullName>
        <label>Capacita personal manejo de agroquímicos</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa sustancias peligrosas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha__c</fullName>
        <label>Fecha</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Nivel_categoria__c</fullName>
        <formula>IF( Puntaje_categoria__c &lt; 2, &apos;c. Bajo&apos;, IF (Puntaje_categoria__c &lt; 4, &apos;b. Medio&apos;, &apos;a. Alto&apos;))</formula>
        <label>Nivel categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_categoria__c</fullName>
        <formula>&apos;Manejo plaguicidas&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre categoría</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nombre_tipo_fecha__c</fullName>
        <formula>Nombre_categoria__c + &apos; &apos; +  TEXT(Tipo__c) + &apos; &apos; + TEXT(Fecha__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre tipo fecha</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_de_Manejo_de_Finca__c</fullName>
        <label>Plan de Manejo de Finca</label>
        <referenceTo>Farm_Management_Plan__c</referenceTo>
        <relationshipLabel>PMF Finca Categoria 7 - Manejo plaguici</relationshipLabel>
        <relationshipName>PMF_Finca_Categorias_7_Manejo_plaguici</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Posee_equipos_de_proteccion__c</fullName>
        <label>Posee equipos de protección</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, siempre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, pero si hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Puntaje_Capacita_personal_manejo_agroqui__c</fullName>
        <formula>IF( 
 OR(
  ISPICKVAL( Capacita_personal_manejo_de_agroquimicos__c , &apos;Sí&apos;),
  ISPICKVAL( Capacita_personal_manejo_de_agroquimicos__c , &apos;No aplica, no usa sustancias peligrosas&apos;)
 )  
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Capacita personal manejo agroqui</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Posee_equipos_de_proteccion__c</fullName>
        <formula>IF( 
 OR(
ISPICKVAL( Posee_equipos_de_proteccion__c , &apos;Sí, siempre&apos;),
ISPICKVAL( Posee_equipos_de_proteccion__c , &apos;Sí, algunas veces&apos;),
ISPICKVAL( Posee_equipos_de_proteccion__c , &apos;X No, pero si hay equipo de protección&apos;),
ISPICKVAL( Posee_equipos_de_proteccion__c , &apos;Sí tiene equipos de protección&apos;)
) 
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Posee equipos de protección</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Registra_aplicaciones_agroquim__c</fullName>
        <formula>IF( 
 AND(
  INCLUDES(  Registra_las_aplicaciones_agroquimicos__c , &apos;Fecha de aplicación&apos;), 
  INCLUDES(  Registra_las_aplicaciones_agroquimicos__c , &apos;Dosis&apos;), 
  INCLUDES(  Registra_las_aplicaciones_agroquimicos__c , &apos;Lote&apos;)
 )
, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Registra aplicaciones (agroquim)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_Usa_equipos_de_proteccion__c</fullName>
        <formula>IF(ISPICKVAL( Usa_equipos_de_proteccion__c , &apos;Sí, siempre&apos;), 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje Usa equipos de protección</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Puntaje_categoria__c</fullName>
        <formula>Puntaje_Posee_equipos_de_proteccion__c + 
Puntaje_Usa_equipos_de_proteccion__c + 
Puntaje_Registra_aplicaciones_agroquim__c + 
Puntaje_Capacita_personal_manejo_agroqui__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Puntaje categoría</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Registra_las_aplicaciones_agroquimicos__c</fullName>
        <label>Registra las aplicaciones (agroquímicos)</label>
        <picklist>
            <picklistValues>
                <fullName>Fecha de aplicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dosis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No registra ningún dato</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Línea base</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Metas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seguimiento</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Usa_equipos_de_proteccion__c</fullName>
        <label>Usa equipos de protección</label>
        <picklist>
            <picklistValues>
                <fullName>Sí, siempre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sí, algunas veces</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, pero si hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, no hay equipo de protección</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No aplica, no usa agroquímicos</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>PMF Finca Categ. 7 - Manejo plaguicidas</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>PMF Finca Categoria 7 - Manejo plaguicid</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PMF Finca Categorias 7 - Manejo plaguici</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>